<resources>
    <string name="url_terms" translatable="false">http://ringoid.com/terms.html</string>
    <string name="url_licenses" translatable="false">http://ringoid.com/licenses-android.html</string>
    <string name="url_privacy" translatable="false">http://ringoid.com/privacy.html</string>
    <string name="url_data_policy" translatable="false">http://ringoid.com/data-summary.html</string>
    <string name="app_name">Ringoid</string>
    <string name="hint_chat_enabled">Type a text message</string>
    <string name="checkbox_terms">I have read and understood\n\n<a href="http://ringoid.com/terms.html">Terms of Service</a> and\n\n<a href="http://ringoid.com/privacy.html">Privacy Policy</a></string>
    <string name="hint_register_confirm">1234</string>
    <string name="error_phone">Please enter phone number</string>
    <string name="button_accept_terms">Accept and Continue</string>
    <string name="login_phone_title">Verify your phone number</string>
    <string name="button_login_phone">Send Verification Code</string>
    <string name="button_register_confirm">Complete registration</string>
    <string name="error_agreement">To continue, please check all boxes</string>
    <string name="settings_terms">Terms of Service</string>
    <string name="settings_delete_account">Delete account</string>
    <string name="settings_about">About</string>
    <string name="hint_numbers">Number</string>
    <string name="blacklist_phone_add">Block it!</string>
    <string name="blacklist_description">Don\'t show my photos to users (and don\'t show their photos to me, and don\'t allow them to like or message me) who have linked their Ringoid accounts to the following phone numbers</string>
    <string name="chat_empty_title">Send emoji</string>
    <string name="chat_empty_lead">to show your interest</string>
    <string name="hint_chat_disabled">Only your match can message first</string>
    <string name="chat_subtitle">Messages</string>
    <string name="privacy">Privacy</string>
    <string name="settings_feedback">Send us email</string>
    <string name="settings_logout">Sign out</string>
    <string name="settings_subtitle">Settings</string>
    <string name="dialog_report_title">Block this user?</string>
    <string name="dialog_report_item_1">Inappropriate content, sexually explicit, nudity, pornography</string>
    <string name="dialog_report_item_2">Stolen photos, illegal content, fraud</string>
    <string name="dialog_report_message">They won\'t be able to see your photos, like or message you.</string>
    <string name="dialog_report_cancel">cancel</string>
    <string name="dialog_report_confirm">block</string>
    <string name="dialog_cancel">cancel</string>
    <string name="settings_rate">Rate in Google Play</string>
    <string name="push">Push Notifications</string>
    <string name="settings_privacy_photos">Photos</string>
    <string name="settings_privacy_photos_message">Who can see your photos?</string>
    <string name="settings_privacy_photos_all">Ringoid users of the opposite sex</string>
    <string name="settings_privacy_photos_liked">Only users whom photos I liked</string>
    <string name="settings_privacy_photos_noone">Only me</string>
    <string name="settings_privacy_likes_nums">Who can see how many times your photos were liked?</string>
    <string name="settings_privacy_likes_who">Who can see who liked you?</string>
    <string name="settings_privacy_search">Can search engines find and index your photos?</string>
    <string name="settings_privacy_phone">Phone number</string>
    <string name="settings_privacy_phone_blacklist">Blacklist</string>
    <string name="settings_privacy_phone_see">Who can see your phone number?</string>
    <string name="settings_privacy_phone_find">Who can find your profile by your phone number?</string>
    <string name="settings_privacy_location">Location</string>
    <string name="settings_privacy_age">Age</string>
    <string name="settings_privacy_activity">Activity</string>
    <string name="settings_privacy_policy">Data protection</string>
    <string name="settings_privacy_item_value_only_me">Only me</string>
    <string name="settings_privacy_location_distance">Safety distance</string>
    <string name="settings_privacy_age_who">Who can see your age?</string>
    <string name="settings_privacy_policy_data_storage">Personal data that Ringoid holds about you</string>
    <string name="settings_privacy_policy_privacy">Privacy Policy</string>
    <string name="settings_privacy_subtitle">FAQ</string>
    <string name="settings_privacy_activity_likes">Who can see which photos you liked?</string>
    <string name="settings_privacy_activity_reports">Who can see which photos you reported?</string>
    <string name="settings_privacy_item_value_no">No</string>
    <string name="settings_privacy_item_value_noone">No one</string>
    <string name="settings_privacy_distance_message">Don\'t show my photos to Ringoid users (and don\'t show their photos to me), and don\'t allow them to like or message me who is closer than</string>
    <string name="settings_privacy_distance_0">0 meters (0 feet, 0 yards)</string>
    <string name="settings_privacy_distance_1">10 meters (32 feet, 10 yards)</string>
    <string name="settings_privacy_distance_25">25 meters (82 feet, 27 yards)</string>
    <string name="settings_privacy_distance_2">50 meters (164 feet, 54 yards)</string>
    <string name="settings_privacy_distance_3">100 meters (328 feet, 109 yards)</string>
    <string name="settings_privacy_distance_4">250 meters (820 feet, 273 yards)</string>
    <string name="privacy_distance_subtitle">Safety Distance</string>
    <string name="distance_0">0 meters (0 feet, 0 yards)</string>
    <string name="distance_1">10 meters (32 feet, 10 yards)</string>
    <string name="distance_2">50 meters (164 feet, 54 yards)</string>
    <string name="distance_3">100 meters (328 feet, 109 yards)</string>
    <string name="distance_4">250 meters (820 feet, 273 yards)</string>
    <string name="dialog_logout_title">Sign out?</string>
    <string name="dialog_logout_message">You will need to have access to your phone number to sign in. You won\'t be able to return to your account in any other way.</string>
    <string name="dialog_logout_confirm">Sign out</string>
    <string name="dialog_account_delete_title">Delete account?</string>
    <string name="dialog_account_delete_message">Your profile will be deactivated and your photos will be hidden from everyone immediately so no one can discover, like or message you.</string>
    <string name="dialog_account_delete_message_2">If you don\'t sign in within 30 days then your account and data will be deleted permanently.\n\nYou will lose all likes that your photos received.</string>
    <string name="dialog_account_delete_message_3">If you just want to hide your photos from everyone, you can do it in Settings.</string>
    <string name="dialog_account_delete_confirm">Delete</string>
    <string name="settings_push_likes_message">New likes</string>
    <string name="settings_push_likes_description">Someone has liked you</string>
    <string name="settings_push_matches_description">You just got a new match</string>
    <string name="settings_push_matches_message">New matches</string>
    <string name="settings_push_messages_message">New messages</string>
    <string name="settings_push_messages_description">Your match sent you a new message</string>
    <string name="settings_push_subtitle">Push Notifications</string>
    <string name="skip">skip</string>
    <string name="welcome_title_1">Safer Dating</string>
    <string name="welcome_message_1_1"><![CDATA[Ringoid hides your <b>age</b>, location, distance, and online status from everyone.]]></string>
    <string name="welcome_message_1_2"><![CDATA[To register, you need to enter only your phone number, year of birth, and sex.]]></string>
    <string name="welcome_message_1_3"><![CDATA[You can show your photos only to people you liked first, <b>blacklist phone numbers</b>, and specify safety distance to prevent people from seeing your photos if they are too close.]]></string>
    <string name="welcome_title_2">More Feedback</string>
    <string name="welcome_message_2_1">Ringoid shows who liked you, and you can see how many likes your photos received.</string>
    <string name="welcome_message_2_2">You can like as much per day as you want. If you like different photos of the same user, your profile will rise higher in their feeds.</string>
    <string name="welcome_message_2_3"><![CDATA[All of that for <b>free</b>, including messaging your matches. Ringoid doesn\'t show ads and doesn\'t charge for services.]]></string>
    <string name="welcome_title_3">More Visual</string>
    <string name="welcome_message_3_1"><![CDATA[Ringoid sorts profiles by distance and <b>popularity (likes).</b>]]></string>
    <string name="welcome_message_3_2">The more likes your photos received, the higher your popularity ranking in your area and the more people of the opposite sex can discover you.</string>
    <string name="welcome_message_3_3">Photos with more likes are shown first. Only you can see how many likes your photos received.</string>
    <string name="settings_privacy_phones_subtitle">Blacklist</string>
    <string name="settings_privacy_phone_blacklist_add_subtitle">Add to the blacklist</string>
    <string name="settings_privacy_search_unregister">Can people who didn\'t register their phone numbers get access to your photos in Ringoid?</string>
    <string name="settings_privacy_search_same_gender">Can Ringoid users of the same sex discover your profile and browse your photos?</string>
    <string name="settings_privacy_phone_login">Who can sign in into your account without access to your phone number?</string>
    <string name="settings_privacy_location_current">Who can see your current location?</string>
    <string name="settings_privacy_location_who_distance">Who can see distance between you and others?</string>
    <string name="settings_privacy_location_history">Who can see your location history?</string>
    <string name="settings_privacy_birth">Who can see your year of birth?</string>
    <string name="settings_privacy_activity_blocks">Who can see which profiles you blocked?</string>
    <string name="settings_privacy_activity_use">Who can see when and how often you use Ringoid?</string>
    <string name="checkbox_age">I am of legal age and adult, as defined by the country or state from where I am accessing Ringoid app</string>
    <string name="login_sms">Enter the code that was sent to</string>
    <string name="button_continue">Continue</string>
    <string name="login_birth_message">Year of Birth</string>
    <string name="login_birth_gender_message">Your Sex</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="button_want_it">I want it!</string>
    <string name="settings_privacy_messages">Messages</string>
    <string name="settings_privacy_location_rank">Who can see how popular you are in your area?</string>
    <string name="settings_privacy_location_rank_value">No one. Only you can see how many likes your photos received.</string>
    <string name="settings_privacy_location_bumped">Who can see that you bumped into other users?</string>
    <string name="dialog_report_switch">Report this user</string>
    <string name="dialog_report_item_3">Spam, advertising, commercial activity</string>
    <string name="dialog_report_item_4">Human or sex trafficking, criminal activity</string>
    <string name="dialog_report_item_5">Underage user, child exploitation</string>
    <string name="dialog_report_item_6">Harassment or threats, verbal abuse</string>
    <string name="dialog_image_delete_title">Delete photo?</string>
    <string name="dialog_image_delete_message">This action is permanent and cannot be undone.</string>
    <string name="dialog_image_delete_confirm">DELETE</string>
</resources>