<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="@layout/fragment_settings_faq">

    <TextView
        android:id="@+id/tvPrivacyAge"
        style="@style/settings_privacy_menu_title"
        android:text="@string/settings_privacy_age" />

    <LinearLayout
        android:id="@+id/llPrivacyAge"
        style="@style/settings_privacy_items_container">

        <com.ringoid.view.ui.view.ViewPrivacyItemDescription
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:item_privacy_subtitle="@string/settings_privacy_item_value_noone"
            app:item_privacy_title="@string/settings_privacy_age_who" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/divider" />

        <com.ringoid.view.ui.view.ViewPrivacyItemDescription
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:item_privacy_subtitle="@string/settings_privacy_item_value_noone"
            app:item_privacy_title="@string/settings_privacy_birth" />

    </LinearLayout>
</merge>