<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="20dp"
    android:paddingEnd="20dp"
    android:paddingStart="20dp"
    android:paddingTop="24dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/dialog_image_delete_title"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Title" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/dialog_image_delete_message"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvCancel"
            style="@style/buttonBase.Dialog"
            android:text="@string/dialog_cancel"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Button" />

        <TextView
            android:id="@+id/tvConfirm"
            style="@style/buttonBase.Dialog"
            android:text="@string/dialog_image_delete_confirm"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Button"
            android:textColor="@color/colorWarning" />

    </LinearLayout>


</LinearLayout>