<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="@layout/fragment_settings_faq">

    <TextView
        android:id="@+id/tvPrivacyPolicy"
        style="@style/settings_privacy_menu_title"
        android:text="@string/settings_privacy_policy" />

    <LinearLayout
        android:id="@+id/llPrivacyPolicy"
        style="@style/settings_privacy_items_container">

        <TextView
            android:id="@+id/tvSettingsPrivacyPolicyDataStorage"
            style="@style/settings_menu_item"
            android:drawableEnd="@drawable/ic_keyboard_arrow_right_gray_24dp"
            android:text="@string/settings_privacy_policy_data_storage" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/divider" />

        <TextView
            android:id="@+id/tvSettingsPrivacyPolicyNotice"
            style="@style/settings_menu_item"
            android:drawableEnd="@drawable/ic_keyboard_arrow_right_gray_24dp"
            android:text="@string/settings_privacy_policy_privacy" />

    </LinearLayout>
</merge>